# perspt

./: .gitignore  BADGES.md  Cargo.toml  LICENSE  PSP-000004-PLAN.md  README.md  REFACTORING_SUMMARY.md  RELEASE_PROCESS.md  UI_ENHANCEMENT_SUMMARY.md  config.json.example  config.toml.example  debug-long-response.sh  docs-dev.sh  generate-docs.sh  test-font-config.sh  validate-docs.sh
.cargo/: config.toml
.github/: PSP_AUTOMATION_GUIDE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+3 more)
crates/perspt/: Cargo.toml
crates/perspt-agent/: Cargo.toml
crates/perspt-agent/src/: agent.rs  context_retriever.rs  ledger.rs  lib.rs  lsp.rs  orchestrator.rs  prompt_compiler.rs  prompts.rs  test_runner.rs  tools.rs  types.rs
crates/perspt-agent/src/orchestrator/: bundle.rs  commit.rs  convergence.rs  init.rs  mod.rs  planning.rs  repair.rs  sdk_bridge.rs  solo.rs  verification.rs
crates/perspt-cli/: Cargo.toml
crates/perspt-cli/src/: main.rs
crates/perspt-cli/src/commands/: abort.rs  agent.rs  chat.rs  config.rs  dashboard.rs  init.rs  ledger.rs  logs.rs  mod.rs  resume.rs  simple_chat.rs  status.rs
crates/perspt-coding/: Cargo.toml
crates/perspt-coding/src/: lang.rs  lib.rs  runtime.rs  symbols.rs
crates/perspt-coding/tests/: contract.rs
crates/perspt-core/: Cargo.toml
crates/perspt-core/src/: config.rs  events.rs  lib.rs  llm_provider.rs  memory.rs  normalize.rs  path.rs  paths.rs  plugin.rs  types.rs
crates/perspt-dashboard/: Cargo.toml  build.rs  input.css  package-lock.json  package.json
crates/perspt-dashboard/src/: auth.rs  error.rs  lib.rs  sse.rs  state.rs
crates/perspt-dashboard/src/handlers/: dag.rs  decisions.rs  energy.rs  llm.rs  mod.rs  overview.rs  sandbox.rs  session_detail.rs
crates/perspt-dashboard/src/views/: dag.rs  decisions.rs  energy.rs  llm.rs  mod.rs  overview.rs  sandbox.rs  session_detail.rs
crates/perspt-dashboard/static/: app.js  dashboard.css
crates/perspt-dashboard/templates/: base.html  login.html  session_base.html
crates/perspt-dashboard/templates/pages/: dag.html  decisions.html  energy.html  llm.html  overview.html  sandbox.html  session_detail.html
crates/perspt-dashboard/templates/partials/: node_stats.html
crates/perspt-policy/: Cargo.toml
crates/perspt-policy/src/: engine.rs  lib.rs  sanitize.rs
crates/perspt-research/: Cargo.toml
crates/perspt-research/src/: lib.rs
crates/perspt-sandbox/: Cargo.toml
crates/perspt-sandbox/src/: command.rs  lib.rs
crates/perspt-sdk/: Cargo.toml
crates/perspt-sdk/src/: benchmark.rs  capability.rs  certificate.rs  command.rs  conformal.rs  domain.rs  energy.rs  error.rs  exploration.rs  gate.rs  goal.rs  independence.rs  kernel.rs  ledger.rs  lib.rs  observability.rs  residual.rs  routing.rs  scheduler.rs  spectral.rs  stability.rs  workgraph.rs
crates/perspt-sdk/tests/: mechanism_checks.rs
crates/perspt-store/: Cargo.toml
crates/perspt-store/src/: lib.rs  schema.rs  store.rs
crates/perspt-tui/: Cargo.toml
crates/perspt-tui/src/: agent_app.rs  app_event.rs  chat_app.rs  dashboard.rs  diff_viewer.rs  lib.rs  logs_viewer.rs  review_modal.rs  simple_input.rs  task_tree.rs  telemetry.rs  theme.rs  tui_runner.rs  ui.rs
crates/perspt/src/: lib.rs
docs/: FONT_REQUIREMENTS.md  README.md  custom.css  developer_guide.md  header.html  script.js  theme.css  user_guide.md
docs/perspt_book/: pyproject.toml
docs/perspt_book/source/: acknowledgments.rst  changelog.rst  conf.py  conf_ci.py  configuration.rst  getting-started.rst  index.rst  installation.rst  introduction.rst  license.rst  quickstart.rst
docs/perspt_book/source/_static/: custom.css
docs/perspt_book/source/api/: config.rst  index.rst  llm-provider.rst  main.rst  modules.rst  perspt-agent.rst  perspt-cli.rst  perspt-core.rst  perspt-dashboard.rst  perspt-policy.rst  perspt-sandbox.rst  perspt-store.rst  perspt-tui.rst  ui.rst
docs/perspt_book/source/concepts/: index.rst  psp-process.rst  srbn-architecture.rst  stability-agent-mode.rst  workspace-crates.rst
docs/perspt_book/source/developer-guide/: architecture.rst  contributing.rst  extending.rst  index.rst  testing.rst
docs/perspt_book/source/howto/: agent-options.rst  configuration.rst  dashboard-setup.rst  index.rst  providers.rst  security-rules.rst
docs/perspt_book/source/plots/: front_page_abm.py
docs/perspt_book/source/reference/: cli-reference.rst  index.rst  key-bindings.rst  troubleshooting.rst
docs/perspt_book/source/tutorials/: agent-mode.rst  custom-workflows.rst  dashboard-monitoring.rst  example-python-etl.rst  example-rust-cli.rst  example-scientific.rst  first-chat.rst  headless-mode.rst  index.rst  local-models.rst
docs/perspt_book/source/user-guide/: advanced-features.rst  agent-mode.rst  basic-usage.rst  dashboard.rst  index.rst  providers.rst  troubleshooting.rst
docs/psps/: MAINTAINER_GUIDE.rst  Makefile  README.rst  build.py  pyproject.toml
docs/psps/psp_sphinx_extensions/: __init__.py
docs/psps/psp_sphinx_extensions/psp_processor/: __init__.py
docs/psps/psp_sphinx_extensions/psp_processor/html/: __init__.py  psp_html_builder.py  psp_html_translator.py
docs/psps/psp_sphinx_extensions/psp_processor/parsing/: __init__.py  psp_parser.py  psp_role.py
docs/psps/psp_sphinx_extensions/psp_theme/: theme.conf
docs/psps/psp_sphinx_extensions/psp_theme/static/: colour_scheme.js  mq.css  style.css  wrap_tables.js
docs/psps/psp_sphinx_extensions/psp_theme/templates/: layout.html  page.html  search.html
docs/psps/source/: conf.py  contents.rst  psp-0000-multiline-input.rst  psp-000000.rst  psp-000001.rst  psp-000002.rst  psp-000003-simple-cli-mode.rst  psp-000003.rst  psp-000004.rst  psp-000005.rst  psp-000006.rst  psp-000007.rst  psp-000008.rst  psp-XXXXXX-multiline-input.rst  psp-XXXXXX-simple-cli-mode.rst  psp-template.rst
docs/psps/source/psp-000001/: status-flow.dot  workflow-diagram.dot  workflow-diagram.txt
src/: cli.rs  config.rs  gemini.rs  gemini_llm.rs  llm_provider.rs  local_llm_provider.rs  main.rs  openai.rs  openai_llm.rs  ui.rs
(+13 files in other folders)
