# Cargo.toml - Perspt Workspace
[workspace]
resolver = "2"
members = [
    "crates/perspt-core",
    "crates/perspt-tui",
    "crates/perspt-agent",
    "crates/perspt-policy",
    "crates/perspt-sandbox",
    "crates/perspt-cli",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
repository = "https://github.com/eonseed/perspt"
homepage = "https://eonseed.github.io/perspt/"
