# Cargo.toml - Perspt Workspace
[workspace]
resolver = "2"
members = [
    "crates/perspt-core",
    "crates/perspt-tui",
    "crates/perspt-agent",
    "crates/perspt-policy",
    "crates/perspt-sandbox",
    "crates/perspt-cli",
    "crates/perspt-store",
    "crates/perspt-dashboard",
    "crates/perspt",
]

[workspace.package]
version = "0.5.7"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
repository = "https://github.com/eonseed/perspt"
homepage = "https://eonseed.github.io/perspt/"

[workspace.dependencies]
perspt-core = { version = "0.5.7", path = "crates/perspt-core" }
perspt-agent = { version = "0.5.7", path = "crates/perspt-agent" }
perspt-tui = { version = "0.5.7", path = "crates/perspt-tui" }
perspt-policy = { version = "0.5.7", path = "crates/perspt-policy" }
perspt-sandbox = { version = "0.5.7", path = "crates/perspt-sandbox" }
perspt-store = { version = "0.5.7", path = "crates/perspt-store" }
perspt-cli = { version = "0.5.7", path = "crates/perspt-cli" }
perspt-dashboard = { version = "0.5.7", path = "crates/perspt-dashboard" }
perspt = { version = "0.5.7", path = "crates/perspt" }

# Exact-pinned to avoid libduckdb-sys recompilation on `cargo update`.
# Only changes when you explicitly bump the version here.
duckdb = { version = "=1.10501.0", features = ["bundled"] }
