[package]
name = "perspt-agent"
version = "0.1.0"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "SRBN Orchestrator and Agent logic for Perspt"
repository = "https://github.com/eonseed/perspt"
homepage = "https://github.com/eonseed/perspt"
documentation = "https://docs.rs/perspt-agent"
keywords = ["agent", "srbn", "llm", "coding"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
perspt-core = { version = "0.1.0", path = "../perspt-core" }
perspt-policy = { version = "0.1.0", path = "../perspt-policy" }
perspt-sandbox = { version = "0.1.0", path = "../perspt-sandbox" }

# Graph management
petgraph = "0.8"

# State persistence
duckdb = "1.1"

# LSP Client
lsp-types = "0.97"
url = "2.5"

# UUID for session IDs
uuid = { version = "1.11", features = ["v4"] }

# Async
async-trait = "0.1.88"
tokio = { version = "1.42", features = ["full", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
log = "0.4"
# Code search (ripgrep library facade)
grep = "0.4"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.14"
