[package]
name = "perspt-cli"
version = "0.5.0"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "CLI entry point for Perspt - A stability-aware AI coding assistant"
repository = "https://github.com/eonseed/perspt"
homepage = "https://github.com/eonseed/perspt"
documentation = "https://docs.rs/perspt-cli"
keywords = ["cli", "ai", "llm", "coding", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "perspt"
path = "src/main.rs"

[dependencies]
perspt-core = { version = "0.1.0", path = "../perspt-core" }
perspt-tui = { version = "0.1.0", path = "../perspt-tui" }
perspt-agent = { version = "0.1.0", path = "../perspt-agent" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.42", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1.0"
dirs = "6.0"
atty = "0.2"
