[package]
name = "perspt-coding"
version = "0.6.2"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "Coding domain package for the Perspt SRBN agent SDK: residual schema, energy model, and correction directions for Rust, Python, and TypeScript (PSP-8)"
repository = "https://github.com/eonseed/perspt"
homepage = "https://github.com/eonseed/perspt"
documentation = "https://docs.rs/perspt-coding"
keywords = ["srbn", "coding", "agent", "rust", "verifier"]
categories = ["development-tools"]

[dependencies]
perspt-sdk = { version = "0.6.2", path = "../perspt-sdk" }
serde = { version = "1.0", features = ["derive"] }
