[package]
name = "perspt-core"
version = "0.1.0"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "Core types and LLM provider abstraction for Perspt"

[dependencies]
# LLM unified interface
genai = "0.4.4"
futures = "0.3"

# Core async and traits
async-trait = "0.1.88"
tokio = { version = "1.42", features = ["full", "sync"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LSP types for agent integration
lsp-types = "0.97"

# Logging
log = "0.4"

# Utilities
anyhow = "1.0"
