[package]
name = "perspt-core"
version = "0.6.2"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "Core types and LLM provider abstraction for Perspt"
repository = "https://github.com/eonseed/perspt"
homepage = "https://github.com/eonseed/perspt"
documentation = "https://docs.rs/perspt-core"
keywords = ["llm", "ai", "chat", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# LLM unified interface
genai = "0.6.5"
futures = "0.3"

# Google Cloud Application Default Credentials (ADC) for Vertex AI auth.
# genai's Vertex adapter needs an OAuth2 Bearer token supplied via an
# AuthResolver; gcp_auth auto-detects ADC (gcloud login / service account /
# metadata server) so no static API key is required.
gcp_auth = "0.12"

# TOML configuration parsing/serialization
toml = "1.1"

# Core async and traits
async-trait = "0.1.88"
tokio = { version = "1.42", features = ["full", "sync"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LSP types for agent integration
lsp-types = "0.97"

# Logging
log = "0.4"

# UUID for session IDs
uuid = { version = "1.11", features = ["v4"] }

# Platform directories
dirs = "5.0"

# Utilities
anyhow = "1.0"
