[package]
name = "perspt-store"
version = "0.1.0"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "DuckDB-based persistence layer for Perspt SRBN sessions"
repository = "https://github.com/eonseed/perspt"
homepage = "https://github.com/eonseed/perspt"
documentation = "https://docs.rs/perspt-store"
keywords = ["persistence", "duckdb", "srbn", "session"]
categories = ["database"]

[dependencies]
perspt-core = { version = "0.1.0", path = "../perspt-core" }

# DuckDB for persistence
duckdb = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for session IDs
uuid = { version = "1.11", features = ["v4"] }

# Hashing for Merkle tree
sha2 = "0.10"

# Async
tokio = { version = "1.42", features = ["full"] }

# Logging
log = "0.4"

# Utilities
anyhow = "1.0"

# Hex encoding for Merkle hashes
hex = "0.4"

# Platform-specific directories
dirs = "5.0"
