[package]
name = "perspt-tui"
version = "0.5.2"
edition = "2021"
authors = ["Vikrant Rathore", "Ronak Rathore"]
license = "LGPL-3.0"
description = "Ratatui-based TUI for Perspt"
repository = "https://github.com/eonseed/perspt"
homepage = "https://github.com/eonseed/perspt"
documentation = "https://docs.rs/perspt-tui"
keywords = ["tui", "terminal", "ui", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
perspt-core = { version = "0.5.2", path = "../perspt-core" }
perspt-agent = { version = "0.5.2", path = "../perspt-agent" }
perspt-store = { version = "0.5.2", path = "../perspt-store" }

# UI components
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = "0.13"

# Async
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Rich Input
tui-textarea = "0.7"

# Diff Computation
similar = "2.6"

# Syntax Highlighting
syntect = "5.2"

# Async Indicators (0.10.0 for ratatui 0.30 compat)
throbber-widgets-tui = "0.10"

# Markdown Rendering (terminal)
termimad = "0.34"

# Markdown to Ratatui Text
tui-markdown = "0.3.6"

# Utilities
anyhow = "1.0"
log = "0.4"

# Text Wrapping for Virtual Scrolling
textwrap = "0.16"
unicode-width = "0.2"
