[project]
name = "perspt-book"
version = "0.4.4"
description = "Comprehensive documentation for Perspt - Your Terminal's Window to the AI World"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.2.3",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-tabs>=3.4.7",
    "sphinx-autoapi>=3.3.3",
    "sphinx-autobuild>=2024.10.3",
]

[project.optional-dependencies]
dev = [
    "sphinx-autobuild>=2024.10.3",
]
