[project]
name = "perspt-book"
version = "0.4.4"
description = "Comprehensive documentation for Perspt - Your Terminal's Window to the AI World"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=9.1.0",
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-tabs>=3.5.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-autobuild>=2025.8.25",
    "matplotlib>=3.11.0",
    "roman-numerals-py>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "sphinx-autobuild>=2025.8.25",
]
